--- a/web/views/usuario/trocarsenha.phtml
+++ b/web/views/usuario/trocarsenha.phtml
@@ -1,5 +1,6 @@
 <div class="container container-sm w-50">
     <form method="post" action="/usuario/salvarSenha">
+    <input type="hidden" name="usuarioId" value="<?= isset($usuarioAlteracao) ? $usuarioAlteracao->getId() : '' ?>"/>
         <div class="row g-3 align-items-center mb-2">
             <label for="senha" class="col-form-label text-end align-content-end col-md-2">Digite a nova senha <span class="text-danger">*</span></label></label>
             <div class="col-md-3">
