--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -76,7 +76,7 @@
                             <a class="dropdown-item" href="/usuario/editar?id=<?= $_SESSION['usuario']->getId() ?>">Editar</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="/usuario/trocarSenha?id=<?=$_SESSION['usuario']->getId()?>">Trocar a senha</a>
+                            <a class="dropdown-item" href="/usuario/trocarSenha">Trocar a senha</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/autenticacao/processaLogout">Sair</a>
