--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -9,7 +9,7 @@
     <link href="/assets/css/sistema.css" rel="stylesheet" />
 </head>
 
-<body>
+<body  class="d-flex flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
         <a class="navbar-brand logo" href="/autenticacao"></a>
