--- a/web/layouts/sistema/rodape.phtml
+++ b/web/layouts/sistema/rodape.phtml
@@ -1,4 +1,5 @@
-<div class="footer">
+</div>
+<div class="footer  mt-auto py-3">
     <div class="pull-right">
         Desenvolvido por
         <strong>Alana Silva</strong> |
@@ -8,7 +9,6 @@
         <strong>Mais1Code</strong> em parceria com a
         <strong>Food Finder</strong>
     </div>
-</div>
 </div>
 </body>
 </html>
