--- a/web/layouts/sistema-candidato/cabecalho.phtml
+++ b/web/layouts/sistema-candidato/cabecalho.phtml
@@ -6,13 +6,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ce211dcce0.js" crossorigin="anonymous"></script>
-    <link href="/assets/css/painel.css" rel="stylesheet"/>
+    <link href="/assets/css/sistema.css" rel="stylesheet" />
 </head>
 
-<body>
+<body  class="d-flex flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
-        <a class="navbar-brand logo" href="/autenticacao"></a>
+        <a class="navbar-brand logo" href="/candidato/login"></a>
+        <div class="navbar-text">
+            <?php if (CandidatoController::estaLogado()): ?>
+                <span style="font-size: 12px"><b><?= $_SESSION['candidato']->getNome() ?></b>
+                    <a style="margin-left: 5px;" class="link-secondary text-decoration-none" href="/candidato/processaLogout">Sair</a>
+                </span>
+                <br>
+            <?php endif; ?>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,21 +28,20 @@
         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto ">
                 <li class="nav-item">
-                    <a class="nav-link mx-2 active" aria-current="page" href="/">
-                        <i class="fas fa-briefcase"></i> Painel de vagas
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link mx-2 active" aria-current="page" href="/autenticacao/">
-                        <i class="fas fa-building"></i> Área da Empresa
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
                     <a class="nav-link mx-2 active" aria-current="page" href="/candidato/login">
-                        <i class="fas fa-users"></i> Área do candidato
+                        <i class="fas fa-home"></i> Home
                     </a>
                 </li>
-            </ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-building"></i> Vagas
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" href="/candidato/listar">Minhas Vagas</a>
+                        </li>
+                    </ul>
+                </li>
         </div>
     </div>
 </nav>
