alterações de layout

--- a/web/layouts/sistema-candidato/cabecalho.phtml
+++ b/web/layouts/sistema-candidato/cabecalho.phtml
@@ -9,7 +9,7 @@
     <link href="/assets/css/sistema.css" rel="stylesheet" />
 </head>
 
-<body  class="d-flex flex-column min-vh-100">
+<body  class="d-flex justify-content-center flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
         <a class="navbar-brand logo" href="/candidato/login"></a>
@@ -45,4 +45,3 @@
         </div>
     </div>
 </nav>
-<div class="container mt-2">
