--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -63,18 +63,17 @@
                 </div>
             </div>
         </div>
-
-        <table class="table">
-            <thead>
-
-            <tr>Lista de Candidatos
-                <th scope="col">Nome</th>
-                <th scope="col">Email</th>
-                <th scope="col">Última Desistência</th>
-                <th scope="col">Status</th>
-            </tr>
-            </thead>
-            <tbody>
+        <?php if(!empty($vaga)): ?>
+            <table class="table">
+                <thead>
+                    <tr>Lista de Candidatos
+                        <th scope="col">Nome</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Última Desistência</th>
+                        <th scope="col">Status</th>
+                    </tr>
+                </thead>
+                <tbody>
                     <?php foreach ($candidato_vagas as $candidato_vaga) : ?>
                     <tr>
                         <th><?=$candidato_vaga->getCandidato()->getNome()?></th>
@@ -83,7 +82,8 @@
                         <td><?=$candidato_vaga->getStatus()  ?></td>
                     </tr>
                     <?php endforeach; ?>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        <?php endif; ?>
     </form>
 </div>
