Criado a action no VagaController que processa  a mudanca de status de uma candidatura

--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -63,27 +63,32 @@
                 </div>
             </div>
         </div>
-        <?php if(!empty($vaga)): ?>
-            <table class="table">
-                <thead>
-                    <tr>Lista de Candidatos
-                        <th scope="col">Nome</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Última Desistência</th>
-                        <th scope="col">Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php foreach ($candidato_vagas as $candidato_vaga) : ?>
+    </form>
+
+    <div class="col-12">
+        <?php FlashMessage::getMessage() ?>
+    </div>
+
+    <?php if(!empty($vaga)): ?>
+        <table class="table">
+            <thead>
+                <tr>Lista de Candidatos
+                    <th scope="col">Nome</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Última Desistência</th>
+                    <th scope="col">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <?php foreach ($candidato_vagas as $candidato_vaga) : ?>
                     <tr>
                         <th><?=$candidato_vaga->getCandidato()->getNome()?></th>
                         <td><?=$candidato_vaga->getCandidato()->getEmail() ?></td>
                         <td><?=$candidato_vaga->getUltimaDesistencia()  ?></td>
                         <td><?=$candidato_vaga->getStatus()  ?></td>
                     </tr>
-                    <?php endforeach; ?>
-                </tbody>
-            </table>
-        <?php endif; ?>
-    </form>
+                <?php endforeach; ?>
+            </tbody>
+        </table>
+    <?php endif; ?>
 </div>
