Corrigido os erros

--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -65,12 +65,8 @@
         </div>
     </form>
 
-    <div class="col-12">
-        <?php FlashMessage::getMessage() ?>
-    </div>
-
     <?php if(!empty($vaga)): ?>
-        <table class="table">
+        <table class="table table-bordered table-striped table-hover caption-top">
             <thead>
                 <tr>Lista de Candidatos
                     <th scope="col">Nome</th>
