--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -40,8 +40,8 @@
                 <label for="beneficios" class="col-form-label">Benefícios</label>
             </div>
             <div class="col-md-6 form-floating">
-                <textarea class="form-control" cols="50" name="requisitos" id="requisitos" style="min-height: 100px;"><?= isset($vaga) ? $vaga->getRequisitos() : '' ?></textarea>
-                <label for="requisitos" class="col-form-label">Requisitos</label>
+                <textarea class="form-control" cols="50" name="requisitos" id="requisitos" style="min-height: 100px;"><?= isset($vaga) ? $vaga->getHabilidade() : ''?></textarea>
+                <label for="requisitos" class="col-form-label">Descrição</label>
             </div>
         </div>
 
