correção em salvar no banco

--- a/web/views/empresa/cadastrar.phtml
+++ b/web/views/empresa/cadastrar.phtml
@@ -30,6 +30,36 @@
                             <span>*</span></label>
                         <input type="text" class="form-control" name="logo" id="logo" placeholder="Adicione uma imagem" required>
                     </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-6 col-md-6 border-start border-secondary">
+            <div class="p-3 p-md-4 p-xl-5">
+                <div class="row gy-3 gy-md-4 overflow-hidden">
+                    <h6>Dados do usuário</h6>
+                    <div class="col-6">
+                        <label for="usuarioCpf" class="form-label">CPF
+                            <span>*</span></label>
+                        <input type="text" class="form-control" name="usuarioCpf" id="usuarioCpf" placeholder="Informe o CPF do usuário" required>
+                    </div>
+                    <div class="col-6">
+                        <label for="usuarioSenha" class="form-label">Senha
+                            <span>*</span></label>
+                        <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required placeholder="*****">
+                    </div>
+                    <div class="col-12">
+                        <label for="usuarioNome" class="form-label">Nome
+                            <span>*</span></label>
+                        <input type="text" class="form-control" name="usuarioNome" id="usuarioNome" placeholder="Informe o nome do usuário" required>
+                    </div>
+                    <div class="col-12">
+                        <label for="usuarioEmail" class="form-label">Email
+                            <span>*</span></label>
+                        <input type="text" class="form-control" name="usuarioEmail" id="usuarioEmail" placeholder="Informe o e-mail do usuário" required>
+                    </div>
+                    
+                    <h6>Dados da filial</h6>
                     <div class="col-12">
                         <label for="filialNome" class="form-label">Nome da filial *</label>
                         <input type="filialNome" class="form-control" name="filialNome" id="filialNome" required>
@@ -40,6 +70,7 @@
                         <div class="notification" id="notification">
                     Apenas 8 digitos
                         </div>
+                        
                     </div>
                     <div class="col-12">
                         <label for="filialLogradouro" class="form-label">Logradouro *</label>
@@ -72,36 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6 col-md-6 border-start border-secondary">
-            <div class="p-3 p-md-4 p-xl-5">
-                <div class="row gy-3 gy-md-4 overflow-hidden">
-                    <h6>Dados do usuário</h6>
-                    <div class="col-6">
-                        <label for="usuarioCpf" class="form-label">CPF
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="usuarioCpf" id="usuarioCpf" placeholder="Informe o CPF do usuário" required>
-                    </div>
-                    <div class="col-6">
-                        <label for="usuarioSenha" class="form-label">Senha
-                            <span>*</span></label>
-                        <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required placeholder="*****">
-                    </div>
-                    <div class="col-12">
-                        <label for="usuarioNome" class="form-label">Nome
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="usuarioNome" id="usuarioNome" placeholder="Informe o nome do usuário" required>
-                    </div>
-                    <div class="col-12">
-                        <label for="usuarioEmail" class="form-label">Email
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="usuarioEmail" id="usuarioEmail" placeholder="Informe o e-mail do usuário" required>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-    </div>
+    </div>            
     <div class="row mt-4">
         <div class="col-12">
             <div class="d-grid">
