--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -43,6 +43,21 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-user-circle"></i> Filiais
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" href="/usuario/editar?id=<?= $_SESSION['usuario']->getId() ?>">Cadastrar</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/usuario/trocarSenha">Listar</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/autenticacao/processaLogout">Sair</a>
+                        </li> 
+                    </ul>  
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-users"></i> Usuários
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -87,4 +102,4 @@
         </div>
     </div>
 </nav>
-<div class="container mt-2">
+<div class="container mt-2"></div>
