introdução a nova funcionalidade cadastrar

--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -43,7 +43,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-user-circle"></i> Filiais
+                        <i class="fas fa-store"></i> Filiais
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
